# apt-manager-gtk

./: .clang-format  CMakeLists.txt  README.md
debian/: changelog  control  rules
src/: cache.cpp  cache.h  main.cpp  type.h  utils.cpp  utils.h
src/extension/: progresspulse.cpp  progresspulse.h  progressrange.cpp  progressrange.h
src/package/: cache.cpp  cache.h  progressacquirestatus.cpp  progressacquirestatus.h  textacquirestatus.cpp  textacquirestatus.h
src/resources/: resources.xml
src/resources/ui/: main.ui
src/widget/: button.cpp  button.h  candidates.cpp  candidates.h  logwindow.cpp  logwindow.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  progressbar.cpp  progressbar.h  sections.cpp  sections.h
